# rfunc-udf

./: Makefile.am  Makefile.common  changes.koi8  changes.txt  changeseng.txt  configure.ac  readme.koi8  readmeeng.txt
doc/: Makefile.am  rfunc.htm
doc/img/: Makefile.am
doc/rus/: Makefile.am  rfunc.htm  rfunc.koi8
m4/: get_fb.m4
rfunc/: rfunc.sln  rfunc.vcxproj  rfunc.vcxproj.filters
source/: .cvsignore  Makefile.am  makefile.bc  makefile.freebsd  makefile.linux  makefile.solaris  myfunc.c  rblob.c  rblob.h  rcalc.c  rcalc.h  rdatetime.c  rdatetime.h  rfile.c  rfile.h  rfunc.c  rfunc.conf  rfunc.h  rfunc4.rc  rfunc5.rc  rfunc6.rc  rmath.c  rmath.h  rmd5.h  rmd5c.c  rmisc.c  rmisc.h  rsecurity.c  rsecurity.h  rstring.c  rstring.h  win1251.c  win1251.h  wincompile.cmd
sql/: rdrop.sql  rext.sql  rfunc4.sql  rfunc4_20to21.sql  rfunc5.sql  rfunc5_20to21.sql  rfunc6.sql  rfunc6_20to21.sql  rfunc6_21to22.sql  rfunc6_d1.sql  rfunc_45to6.sql  rtest.sql
testsuite/: Makefile.am
testsuite/rblob/: Makefile.am  rblob_test.c
testsuite/rdatetime/: Makefile.am  rdatetime_test.c
testsuite/rmath/: Makefile.am  rmath_test.c
testsuite/rstring/: Makefile.am  rstring_test.c
testsuite/testutils/: Makefile.am  rt_util.c  rt_util.h
